# demo

./: .env  .gitignore  Jenkinsfile  browserstack.yml  pyproject.toml  pytest.ini
log/: pytest_configs.json
scripts/: jenkins_test.sh
src/demo/: __init__.py
src/demo/config/: browserstack_config.py  config.py
src/demo/pages/: base_page.py  favorites_page.py  login_page.py  products_page.py
src/demo/utils/: browserstack_api.py  browserstack_driver_config.py  driver_factory.py  logger.py
tests/: conftest.py  test_base.py  test_browserstack_pattern.py  test_debug_selectors.py  test_demo_basic.py  test_favorites_flow.py  test_fixture.py  test_minimal.py  test_playwright_translated.py  test_simple_demo.py
